# virtual_midi

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md  virtual_midi.workspace
freebsd/: virtual_midi  virtual_oss_sequencer
src/: midi_event.c  midi_event.h  sys_utils.c  sys_utils.h
src/virtual_midi/: CMakeLists.txt  dev_midi.c  dev_midi.h  midi_backend.h  midi_backend_fluidsynth.c  virtual_midi.c  virtual_midi.project
src/virtual_oss_sequencer/: CMakeLists.txt  dev_oss_sequencer.c  dev_oss_sequencer.h  virtual_oss_sequencer.c  virtual_oss_sequencer.project
